--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Crypto</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="example_price">999999 $</string>
+    <string name="example_symbol">btc</string>
+    <string name="example_name">Bitcoin</string>
+    <string name="unknown">\?????</string>
 </resources>
