--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,18 @@
     <string name="market_cap_label_details_screen">Market cap:</string>
     <string name="no_data">Not enough data to display chart</string>
     <string name="bottom_menu_item_main_text">Main</string>
-    <string name="bottom_menu_item_settings_text">Settings</string>
+    <string name="settings_label_text">Settings</string>
+    <string name="hint_first_name">First name</string>
+    <string name="hint_last_name">Last name</string>
+    <string name="hint_date_of_birth">Date of Birth</string>
+    <string name="text_helper">Required*</string>
+    <string name="validation_first_and_last_name">The field must not contain more than 20 characters.</string>
+    <string name="no_first_name">Data cannot be saved. Input first name.</string>
+    <string name="no_last_name">Data cannot be saved. Input last name.</string>
+    <string name="no_first_and_last_name">Data cannot be saved. Input first and last name.</string>
+    <string name="first_name_too_long">Data cannot be saved. First name is too long.</string>
+    <string name="first_last_name_are_too_long">Data cannot be saved. First and last names are too long.</string>
+    <string name="last_name_too_long">Data cannot be saved. Last name is too long.</string>
+    <string name="success_input">Data saved.</string>
 
 </resources>
