--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,8 @@
     <string name="first_last_name_are_too_long">Data cannot be saved. First and last names are too long.</string>
     <string name="last_name_too_long">Data cannot be saved. Last name is too long.</string>
     <string name="success_input">Data saved.</string>
+    <string name="download_photo">Download photo</string>
+    <string name="take_a_picture">Take a picture</string>
+    <string name="pick_from_gallery">Pick from gallery</string>
 
 </resources>
