--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,8 @@
     <string name="download_photo">Download photo</string>
     <string name="take_a_picture">Take a picture</string>
     <string name="pick_from_gallery">Pick from gallery</string>
+    <string name="no_internet">No connection to the internet</string>
+    <string name="try_again">Try Again</string>
+    <string name="still_no_connection">Internet connection still not available.</string>
 
 </resources>
